# boltzi

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.md  requirements.txt
doc/: defines.md  example_config.yml  fitting-constants.md  libraries.md  object_naming_language.md  sample-invariants.md
scripts/: boltzi_traj.py  canonical_integral_fit.py  estimate_max_current.py  estimate_phonons.py  eval_temperature_series_artifacts.py
src/: boltzi_config.cpp  boundary.cpp  main.cpp  pool.cpp  random_init.cpp  sample.cpp  sample_geometry_factory.cpp  silencer.cpp  simulation_controller.cpp
src/headers/: artifacts.h  boltzi.h  boltzi_config.h  boltzi_exception.h  boltzi_types.h  boltzi_util.h  boundary.h  boundary_current_log.h  dashboard.h  data_tracer.h  material.h  phonon.h  sample.h  sample_geometry_factory.h  silencer.h  simulation_controller.h
src/headers/boundaries/: bk_vacuum_boundary.h  even_vacuum_boundary.h  isothermal_boundary.h  lambert_vacuum_boundary.h  measure_boundary.h  simple_isothermal_boundary.h  specular_vacuum_boundary.h  vacuum_boundary.h
src/headers/branches/: linear_dispersion_branch.h
src/headers/samples/: simple_sample.h
src/headers/scatter_processes/: simple_parametric.h
src/headers/util/: basics.h  constants.h  containers.h  lindisp.h  pool.h  random.h
tests/: CMakeLists.txt  test_advection.cpp  test_advection_plot.py  test_boundary.cpp  test_dsmc.cpp  test_dsmc.py  test_dsmc_spatial.cpp  test_dsmc_spatial_plot.py  test_grid.cpp  test_lin_disp.cpp  test_lin_material.cpp  test_loader.cpp  test_phonon.cpp  test_pool.cpp  test_random.cpp  test_spawn.cpp  test_spawn_material.py  test_spawn_plot.py  test_trace.cpp
visualization/: artifact_plot.py  boltzi_graphs.py  calc_kappa.py  estimate_conductivity.py
